# OjibweTranslation

./: .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
app/: README.md  main.py  requirements.txt
app/data/samples/templates/: ob_en_dict.csv  vai_dict.csv  vii_dict.csv  vta_dict.csv  vti_dict.csv
docs/: demo.ipynb  demo_short.ipynb
evaluation/: 01_translation_eval.ipynb  README.md  requirements.txt
evaluation/data/: ojibwe_translation_test_set.csv  ojibwe_translation_test_set_result.csv
ojibwe_translation/: __init__.py  oj_constants.py  oj_en_translation.py  oj_translation_core.py  vai.py  vii.py  vta.py  vti.py
preprocessing/dictionary_template_building/: LLM_api.py
preprocessing/dictionary_template_building/VAI/: 01_VAI_pre_processing.ipynb
preprocessing/dictionary_template_building/VII/: 01_VII_pre_processing.ipynb  03_VII_pre_processing_there_be.ipynb
preprocessing/dictionary_template_building/VTA/: 01_VTA_pre_processing.ipynb
preprocessing/dictionary_template_building/VTI/: 01_VTI_pre_processing.ipynb
tests/: test_end_to_end_sentence_building.py  test_initialization.py  test_pronouns_verbs_building.py  test_sentence_building.py  test_verb_analyzer.py
tests/data/templates/: vai_dict.csv  vii_dict.csv  vta_dict.csv  vti_dict.csv
